# hyperscape100-emu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
client/: Cargo.toml  README.md
client/src/: main.rs
data/: README.md
docs/: index.html
src/emu/: control.c  control.h  emu_server.c  emu_server.h  main.c  scene_loader.c  scene_loader.h
src/packets/: crc32.c  crc32.h  packets.h  pkt_parser.c  pkt_parser.h  serializer.c  serializer.h  session.c  session.h
tests/: test_control.c  test_emu_tcp.c  test_full_fidelity.c  test_packets.c  test_parser.c  test_scene_loader.c  test_serializer.c  test_session.c
tools/: README.md  convert.py  requirements.txt
